<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_communities"
        android:icon="@drawable/communities"
        android:title="@string/title_communities" />

    <item android:id="@+id/navigation_add_post"
        android:icon="@drawable/ic_add_box"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notifications" />

    <item android:id="@+id/navigation_jobs"
        android:icon="@drawable/ic_work"
        android:title="@string/title_jobs" />
</menu>